--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   },
   "description": "",
   "main": "index.js",
-  "author": "",
   "license": "MPL-2.0",
   "dependencies": {
-    "borschik": "^1.5.2"
+    "borschik-hash": "^1.1.1"
   }
 }
